--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~11.2.13",
     "express": "^4.17.1",
     "mongoose": "^6.0.7",
+    "multer": "^1.4.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
